[gd_scene load_steps=122 format=2]

[ext_resource path="res://content/sounds/monster/snd_hard_01.wav" type="AudioStream" id=1]
[ext_resource path="res://content/sounds/monster/tick/tick_jump.wav" type="AudioStream" id=2]
[ext_resource path="res://content/sounds/monster/shifter/shifter_Die.wav" type="AudioStream" id=3]
[ext_resource path="res://content/sounds/monster/shifter/SHIFTERSHOT_01.wav" type="AudioStream" id=4]
[ext_resource path="res://content/sounds/monster/tick/Tick_Jump_03.wav" type="AudioStream" id=5]
[ext_resource path="res://content/sounds/monster/shifter/Shifter_teleport.wav" type="AudioStream" id=6]
[ext_resource path="res://systems/audio/Sound.tscn" type="PackedScene" id=7]
[ext_resource path="res://content/monster/shifter/Shifter.gd" type="Script" id=8]
[ext_resource path="res://content/sounds/monster/shifter/Shifter_charge_1.wav" type="AudioStream" id=9]
[ext_resource path="res://content/sounds/monster/shifter/SHIFTERSHOT_01_01.wav" type="AudioStream" id=10]
[ext_resource path="res://systems/audio/Sound.gd" type="Script" id=11]
[ext_resource path="res://content/sounds/monster/tick/Tick_Jump_05.wav" type="AudioStream" id=12]
[ext_resource path="res://content/sounds/monster/tick/Tick_Jump_01.wav" type="AudioStream" id=13]
[ext_resource path="res://content/sounds/monster/tick/Tick_Jump_04.wav" type="AudioStream" id=14]
[ext_resource path="res://content/sounds/monster/tick/Tick_Jump_02.wav" type="AudioStream" id=15]
[ext_resource path="res://content/monster/shifter/sheet.png" type="Texture" id=16]
[ext_resource path="res://content/sounds/monster/shifter/SHIFTERCHARGE.wav" type="AudioStream" id=17]
[ext_resource path="res://content/sounds/monster/shifter/SHIFTERSHOT_01_02.wav" type="AudioStream" id=18]
[ext_resource path="res://content/sounds/monster/shifter/SHIFTERSHOT_01_03.wav" type="AudioStream" id=19]
[ext_resource path="res://content/monster/FlashMaterial.tres" type="Material" id=30]

[sub_resource type="CapsuleShape2D" id=1]
height = 24.0

[sub_resource type="AtlasTexture" id=96]
atlas = ExtResource( 16 )
region = Rect2( 0, 220, 66, 55 )

[sub_resource type="AtlasTexture" id=97]
atlas = ExtResource( 16 )
region = Rect2( 66, 220, 66, 55 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 16 )
region = Rect2( 0, 275, 66, 55 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 16 )
region = Rect2( 66, 275, 66, 55 )

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 16 )
region = Rect2( 132, 275, 66, 55 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 16 )
region = Rect2( 198, 275, 66, 55 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 16 )
region = Rect2( 264, 275, 66, 55 )

[sub_resource type="AtlasTexture" id=91]
atlas = ExtResource( 16 )
region = Rect2( 330, 275, 66, 55 )

[sub_resource type="AtlasTexture" id=92]
atlas = ExtResource( 16 )
region = Rect2( 396, 275, 66, 55 )

[sub_resource type="AtlasTexture" id=93]
atlas = ExtResource( 16 )
region = Rect2( 462, 275, 66, 55 )

[sub_resource type="AtlasTexture" id=94]
atlas = ExtResource( 16 )
region = Rect2( 528, 275, 66, 55 )

[sub_resource type="AtlasTexture" id=95]
atlas = ExtResource( 16 )
region = Rect2( 594, 275, 66, 55 )

[sub_resource type="AtlasTexture" id=106]
atlas = ExtResource( 16 )
region = Rect2( 0, 55, 66, 55 )

[sub_resource type="AtlasTexture" id=107]
atlas = ExtResource( 16 )
region = Rect2( 66, 55, 66, 55 )

[sub_resource type="AtlasTexture" id=108]
atlas = ExtResource( 16 )
region = Rect2( 132, 55, 66, 55 )

[sub_resource type="AtlasTexture" id=109]
atlas = ExtResource( 16 )
region = Rect2( 198, 55, 66, 55 )

[sub_resource type="AtlasTexture" id=110]
atlas = ExtResource( 16 )
region = Rect2( 264, 55, 66, 55 )

[sub_resource type="AtlasTexture" id=111]
atlas = ExtResource( 16 )
region = Rect2( 330, 55, 66, 55 )

[sub_resource type="AtlasTexture" id=112]
atlas = ExtResource( 16 )
region = Rect2( 396, 55, 66, 55 )

[sub_resource type="AtlasTexture" id=113]
atlas = ExtResource( 16 )
region = Rect2( 462, 55, 66, 55 )

[sub_resource type="AtlasTexture" id=114]
atlas = ExtResource( 16 )
region = Rect2( 528, 55, 66, 55 )

[sub_resource type="AtlasTexture" id=115]
atlas = ExtResource( 16 )
region = Rect2( 594, 55, 66, 55 )

[sub_resource type="AtlasTexture" id=116]
atlas = ExtResource( 16 )
region = Rect2( 660, 55, 66, 55 )

[sub_resource type="AtlasTexture" id=117]
atlas = ExtResource( 16 )
region = Rect2( 726, 55, 66, 55 )

[sub_resource type="AtlasTexture" id=118]
atlas = ExtResource( 16 )
region = Rect2( 792, 55, 66, 55 )

[sub_resource type="AtlasTexture" id=119]
atlas = ExtResource( 16 )
region = Rect2( 858, 55, 66, 55 )

[sub_resource type="AtlasTexture" id=120]
atlas = ExtResource( 16 )
region = Rect2( 924, 55, 66, 55 )

[sub_resource type="AtlasTexture" id=121]
atlas = ExtResource( 16 )
region = Rect2( 990, 55, 66, 55 )

[sub_resource type="AtlasTexture" id=122]
atlas = ExtResource( 16 )
region = Rect2( 1056, 55, 66, 55 )

[sub_resource type="AtlasTexture" id=123]
atlas = ExtResource( 16 )
region = Rect2( 1122, 55, 66, 55 )

[sub_resource type="AtlasTexture" id=124]
atlas = ExtResource( 16 )
region = Rect2( 1188, 55, 66, 55 )

[sub_resource type="AtlasTexture" id=125]
atlas = ExtResource( 16 )
region = Rect2( 1254, 55, 66, 55 )

[sub_resource type="AtlasTexture" id=126]
atlas = ExtResource( 16 )
region = Rect2( 1320, 55, 66, 55 )

[sub_resource type="AtlasTexture" id=127]
atlas = ExtResource( 16 )
region = Rect2( 1386, 55, 66, 55 )

[sub_resource type="AtlasTexture" id=128]
atlas = ExtResource( 16 )
region = Rect2( 1452, 55, 66, 55 )

[sub_resource type="AtlasTexture" id=129]
atlas = ExtResource( 16 )
region = Rect2( 1518, 55, 66, 55 )

[sub_resource type="AtlasTexture" id=130]
atlas = ExtResource( 16 )
region = Rect2( 1584, 55, 66, 55 )

[sub_resource type="AtlasTexture" id=131]
atlas = ExtResource( 16 )
region = Rect2( 1650, 55, 66, 55 )

[sub_resource type="AtlasTexture" id=132]
atlas = ExtResource( 16 )
region = Rect2( 1716, 55, 66, 55 )

[sub_resource type="AtlasTexture" id=133]
atlas = ExtResource( 16 )
region = Rect2( 1782, 55, 66, 55 )

[sub_resource type="AtlasTexture" id=134]
atlas = ExtResource( 16 )
region = Rect2( 1848, 55, 66, 55 )

[sub_resource type="AtlasTexture" id=135]
atlas = ExtResource( 16 )
region = Rect2( 1914, 55, 66, 55 )

[sub_resource type="AtlasTexture" id=136]
atlas = ExtResource( 16 )
region = Rect2( 1980, 55, 66, 55 )

[sub_resource type="AtlasTexture" id=137]
atlas = ExtResource( 16 )
region = Rect2( 2046, 55, 66, 55 )

[sub_resource type="AtlasTexture" id=138]
atlas = ExtResource( 16 )
region = Rect2( 2112, 55, 66, 55 )

[sub_resource type="AtlasTexture" id=139]
atlas = ExtResource( 16 )
region = Rect2( 2178, 55, 66, 55 )

[sub_resource type="AtlasTexture" id=140]
atlas = ExtResource( 16 )
region = Rect2( 2244, 55, 66, 55 )

[sub_resource type="AtlasTexture" id=141]
atlas = ExtResource( 16 )
region = Rect2( 2310, 55, 66, 55 )

[sub_resource type="AtlasTexture" id=142]
atlas = ExtResource( 16 )
region = Rect2( 2376, 55, 66, 55 )

[sub_resource type="AtlasTexture" id=143]
atlas = ExtResource( 16 )
region = Rect2( 2442, 55, 66, 55 )

[sub_resource type="AtlasTexture" id=144]
atlas = ExtResource( 16 )
region = Rect2( 2508, 55, 66, 55 )

[sub_resource type="AtlasTexture" id=145]
atlas = ExtResource( 16 )
region = Rect2( 2574, 55, 66, 55 )

[sub_resource type="AtlasTexture" id=146]
atlas = ExtResource( 16 )
region = Rect2( 2640, 55, 66, 55 )

[sub_resource type="AtlasTexture" id=147]
atlas = ExtResource( 16 )
region = Rect2( 2706, 55, 66, 55 )

[sub_resource type="AtlasTexture" id=148]
atlas = ExtResource( 16 )
region = Rect2( 0, 165, 66, 55 )

[sub_resource type="AtlasTexture" id=149]
atlas = ExtResource( 16 )
region = Rect2( 66, 165, 66, 55 )

[sub_resource type="AtlasTexture" id=150]
atlas = ExtResource( 16 )
region = Rect2( 132, 165, 66, 55 )

[sub_resource type="AtlasTexture" id=151]
atlas = ExtResource( 16 )
region = Rect2( 198, 165, 66, 55 )

[sub_resource type="AtlasTexture" id=152]
atlas = ExtResource( 16 )
region = Rect2( 264, 165, 66, 55 )

[sub_resource type="AtlasTexture" id=153]
atlas = ExtResource( 16 )
region = Rect2( 330, 165, 66, 55 )

[sub_resource type="AtlasTexture" id=154]
atlas = ExtResource( 16 )
region = Rect2( 396, 165, 66, 55 )

[sub_resource type="AtlasTexture" id=155]
atlas = ExtResource( 16 )
region = Rect2( 462, 165, 66, 55 )

[sub_resource type="AtlasTexture" id=156]
atlas = ExtResource( 16 )
region = Rect2( 528, 165, 66, 55 )

[sub_resource type="AtlasTexture" id=157]
atlas = ExtResource( 16 )
region = Rect2( 594, 165, 66, 55 )

[sub_resource type="AtlasTexture" id=158]
atlas = ExtResource( 16 )
region = Rect2( 660, 165, 66, 55 )

[sub_resource type="AtlasTexture" id=159]
atlas = ExtResource( 16 )
region = Rect2( 726, 165, 66, 55 )

[sub_resource type="AtlasTexture" id=160]
atlas = ExtResource( 16 )
region = Rect2( 792, 165, 66, 55 )

[sub_resource type="AtlasTexture" id=161]
atlas = ExtResource( 16 )
region = Rect2( 0, 110, 66, 55 )

[sub_resource type="AtlasTexture" id=162]
atlas = ExtResource( 16 )
region = Rect2( 66, 110, 66, 55 )

[sub_resource type="AtlasTexture" id=163]
atlas = ExtResource( 16 )
region = Rect2( 132, 110, 66, 55 )

[sub_resource type="AtlasTexture" id=164]
atlas = ExtResource( 16 )
region = Rect2( 198, 110, 66, 55 )

[sub_resource type="AtlasTexture" id=165]
atlas = ExtResource( 16 )
region = Rect2( 264, 110, 66, 55 )

[sub_resource type="AtlasTexture" id=166]
atlas = ExtResource( 16 )
region = Rect2( 330, 110, 66, 55 )

[sub_resource type="AtlasTexture" id=167]
atlas = ExtResource( 16 )
region = Rect2( 396, 110, 66, 55 )

[sub_resource type="AtlasTexture" id=168]
atlas = ExtResource( 16 )
region = Rect2( 462, 110, 66, 55 )

[sub_resource type="AtlasTexture" id=169]
atlas = ExtResource( 16 )
region = Rect2( 528, 110, 66, 55 )

[sub_resource type="AtlasTexture" id=170]
atlas = ExtResource( 16 )
region = Rect2( 594, 110, 66, 55 )

[sub_resource type="AtlasTexture" id=171]
atlas = ExtResource( 16 )
region = Rect2( 660, 110, 66, 55 )

[sub_resource type="AtlasTexture" id=172]
atlas = ExtResource( 16 )
region = Rect2( 726, 110, 66, 55 )

[sub_resource type="AtlasTexture" id=173]
atlas = ExtResource( 16 )
region = Rect2( 792, 110, 66, 55 )

[sub_resource type="AtlasTexture" id=174]
atlas = ExtResource( 16 )
region = Rect2( 858, 110, 66, 55 )

[sub_resource type="AtlasTexture" id=175]
atlas = ExtResource( 16 )
region = Rect2( 924, 110, 66, 55 )

[sub_resource type="AtlasTexture" id=176]
atlas = ExtResource( 16 )
region = Rect2( 990, 110, 66, 55 )

[sub_resource type="AtlasTexture" id=177]
atlas = ExtResource( 16 )
region = Rect2( 1056, 110, 66, 55 )

[sub_resource type="AtlasTexture" id=178]
atlas = ExtResource( 16 )
region = Rect2( 1122, 110, 66, 55 )

[sub_resource type="AtlasTexture" id=179]
atlas = ExtResource( 16 )
region = Rect2( 1188, 110, 66, 55 )

[sub_resource type="AtlasTexture" id=180]
atlas = ExtResource( 16 )
region = Rect2( 1254, 110, 66, 55 )

[sub_resource type="AtlasTexture" id=181]
atlas = ExtResource( 16 )
region = Rect2( 1320, 110, 66, 55 )

[sub_resource type="AtlasTexture" id=182]
atlas = ExtResource( 16 )
region = Rect2( 1386, 110, 66, 55 )

[sub_resource type="AtlasTexture" id=183]
atlas = ExtResource( 16 )
region = Rect2( 1452, 110, 66, 55 )

[sub_resource type="AtlasTexture" id=184]
atlas = ExtResource( 16 )
region = Rect2( 1518, 110, 66, 55 )

[sub_resource type="AtlasTexture" id=98]
atlas = ExtResource( 16 )
region = Rect2( 0, 0, 66, 55 )

[sub_resource type="AtlasTexture" id=99]
atlas = ExtResource( 16 )
region = Rect2( 66, 0, 66, 55 )

[sub_resource type="AtlasTexture" id=100]
atlas = ExtResource( 16 )
region = Rect2( 132, 0, 66, 55 )

[sub_resource type="AtlasTexture" id=101]
atlas = ExtResource( 16 )
region = Rect2( 198, 0, 66, 55 )

[sub_resource type="AtlasTexture" id=102]
atlas = ExtResource( 16 )
region = Rect2( 264, 0, 66, 55 )

[sub_resource type="AtlasTexture" id=103]
atlas = ExtResource( 16 )
region = Rect2( 330, 0, 66, 55 )

[sub_resource type="AtlasTexture" id=104]
atlas = ExtResource( 16 )
region = Rect2( 396, 0, 66, 55 )

[sub_resource type="AtlasTexture" id=105]
atlas = ExtResource( 16 )
region = Rect2( 462, 0, 66, 55 )

[sub_resource type="SpriteFrames" id=85]
animations = [ {
"frames": [ SubResource( 96 ), SubResource( 97 ) ],
"loop": true,
"name": "hit",
"speed": 8.0
}, {
"frames": [ SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ), SubResource( 93 ), SubResource( 94 ), SubResource( 95 ) ],
"loop": false,
"name": "die",
"speed": 10.0
}, {
"frames": [ SubResource( 106 ), SubResource( 107 ), SubResource( 108 ), SubResource( 109 ), SubResource( 110 ), SubResource( 111 ), SubResource( 112 ), SubResource( 113 ), SubResource( 114 ), SubResource( 115 ), SubResource( 116 ), SubResource( 117 ), SubResource( 118 ), SubResource( 119 ), SubResource( 120 ), SubResource( 121 ), SubResource( 122 ), SubResource( 123 ), SubResource( 124 ), SubResource( 125 ), SubResource( 126 ), SubResource( 127 ), SubResource( 128 ), SubResource( 129 ), SubResource( 130 ), SubResource( 131 ), SubResource( 132 ), SubResource( 133 ), SubResource( 134 ), SubResource( 135 ), SubResource( 136 ), SubResource( 137 ), SubResource( 138 ), SubResource( 139 ), SubResource( 140 ), SubResource( 141 ), SubResource( 142 ), SubResource( 143 ), SubResource( 144 ), SubResource( 145 ), SubResource( 146 ), SubResource( 147 ) ],
"loop": false,
"name": "shoot",
"speed": 10.0
}, {
"frames": [ SubResource( 148 ), SubResource( 149 ), SubResource( 150 ), SubResource( 151 ), SubResource( 152 ), SubResource( 153 ), SubResource( 154 ), SubResource( 155 ), SubResource( 156 ), SubResource( 157 ), SubResource( 158 ), SubResource( 159 ), SubResource( 160 ) ],
"loop": false,
"name": "teleport_end",
"speed": 15.0
}, {
"frames": [ SubResource( 161 ), SubResource( 162 ), SubResource( 163 ), SubResource( 164 ), SubResource( 165 ), SubResource( 166 ), SubResource( 167 ), SubResource( 168 ), SubResource( 169 ), SubResource( 170 ), SubResource( 171 ), SubResource( 172 ), SubResource( 173 ), SubResource( 174 ), SubResource( 175 ), SubResource( 176 ), SubResource( 177 ), SubResource( 178 ), SubResource( 179 ), SubResource( 180 ), SubResource( 181 ), SubResource( 182 ), SubResource( 183 ), SubResource( 184 ) ],
"loop": false,
"name": "teleport_start",
"speed": 15.0
}, {
"frames": [ SubResource( 98 ), SubResource( 99 ), SubResource( 100 ), SubResource( 101 ), SubResource( 102 ), SubResource( 103 ), SubResource( 104 ), SubResource( 105 ) ],
"loop": true,
"name": "idle",
"speed": 20.0
} ]

[node name="Shifter" type="Area2D" groups=["monster"]]
collision_layer = 128
collision_mask = 0
script = ExtResource( 8 )
techId = "shifter"

[node name="HitboxDefault" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2.5 )
shape = SubResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
material = ExtResource( 30 )
position = Vector2( -3, -3.5 )
frames = SubResource( 85 )
animation = "shoot"

[node name="ShootSound" type="AudioStreamPlayer" parent="."]
volume_db = -3.976
pitch_scale = 1.04
bus = "World"
script = ExtResource( 11 )
randomPitch = 0.2
streams = [ ExtResource( 4 ) ]

[node name="ShootSound2" type="AudioStreamPlayer" parent="ShootSound"]
volume_db = -5.982
pitch_scale = 1.06
bus = "World"
script = ExtResource( 11 )
randomPitch = 0.2
streams = [ ExtResource( 10 ), ExtResource( 18 ), ExtResource( 19 ) ]

[node name="ChargingSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )
volume_db = -6.992
pitch_scale = 1.25
bus = "World"
script = ExtResource( 11 )

[node name="ChargingSound2" type="AudioStreamPlayer" parent="ChargingSound"]
stream = ExtResource( 9 )
volume_db = -1.312
pitch_scale = 0.97
bus = "World"

[node name="DieSound" parent="." instance=ExtResource( 7 )]
stream = ExtResource( 3 )
volume_db = 2.137
pitch_scale = 1.18
bus = "Important"
randomVolume = 1.0
randomPitch = 0.2

[node name="IsHitSound2" type="AudioStreamPlayer" parent="DieSound"]
stream = ExtResource( 1 )
volume_db = -11.872
pitch_scale = 1.04
bus = "World"
script = ExtResource( 11 )

[node name="TeleportAwaySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -2.185
pitch_scale = 1.17
bus = "World"

[node name="TeleportAppearSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -2.622
bus = "World"

[node name="StunSound" parent="." instance=ExtResource( 7 )]
stream = ExtResource( 2 )
volume_db = -1.538
pitch_scale = 1.53
bus = "World"
randomPitch = 0.18
streams = [ ExtResource( 13 ), ExtResource( 15 ), ExtResource( 5 ), ExtResource( 14 ), ExtResource( 12 ) ]

[node name="IsHitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = 2.548
pitch_scale = 1.38
bus = "World"
script = ExtResource( 11 )

[node name="ProjectilePosition" type="Position2D" parent="."]
position = Vector2( 17, 26.5 )
__meta__ = {
"_gizmo_extents_": 3.0
}

[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="frame_changed" from="Sprite" to="." method="_on_Sprite_frame_changed"]
